# 0.27.0 (2023-XX-XX)

  * (visibility) visible, hidden hover states

# 0.26.0 (2023-11-10)

  * (type) add `--underline`
  * (type) add `--overline`
  * (type) add `--linethrought`
  * (type) drop `--text-decoration-color`
  * (type) drop `--text-decoration-thickness`
  * (type) drop `--text-underline-offset`

# 0.25.0 (2023-10-06)

  * (type) add xs: classes
  * (copy) add nav, aside
  * (visibility) opacity steps by 5
  * (border) add border-width
  * (outline) outline outline-offset
  * (margin) more margins
  * (position) (left|right|top|bottom)100
  * (variables) drop --default-* properties

# 0.24.0 (2023-03-10)

  * (type) add rlh7, rlh8
  * (type) update rlh variables (revert from 0.19.0 update), rlh inline with lh
    https://github.com/lemmon/abrusco/commit/e44697c281f4f277583742a6aabd1cfa9f600074
    rlh1 -> rlh2
    rlh2 -> rlh4
    rlh3 -> rlh5
    rlh4 -> rlh6
    rlh5 -> rlh7
    rlh6 -> rlh8
  * (copy) update spacing
    https://github.com/lemmon/abrusco/commit/16252a5f9c3973ecc603d91bd21c43db020cfc2a
  * (copy) move --copy-space to :root
  * (copy) add table
  * (copy) h1-h6 font-size
  * (margin) add more margins

# 0.23.0 (2023-01-17)

  * (color, bg) .color, .bg to apply current by defined css variable
  * (color, bg) .color-bg, .bg-color switch color and bg-color defined by css variable
  * (color) tweak yellow
  * (copy) change spacing
    https://github.com/lemmon/abrusco/commit/6f0ed8d9343bacd867300c956612ab69762b8b26
  * (copy) bring back div

# 0.22.0 (2022-09-27)

  * color palette revamp (see https://github.com/lemmon/abrusco/blob/master/variables.css)
  * (color,background) accents hover states
  * (color,background) sat, lum, alpha hover states
  * (border) border-style

# 0.21.0 (2022-08-25)

  * (copy) apply to children only
  * (copy) drop div, add pre

# 0.20.0 (2022-05-31)

  * (grid) responsive gap, gapx, gapy
  * (grid) gap25, gap3, gap4
  * (grid) fix vh100
  * (grid) add mindvh, minsvh, minlvh
  * (grid) add inline-row