@@ -1,6 +1,7 @@
 # 0.27.0 (2023-XX-XX)
 
   * (visibility) visible, hidden hover states
+  * (margin) more margins
 
 # 0.26.0 (2023-11-10)
 
